# data-harmonization-eval

./: .gitignore  .linkmllint.yaml  Makefile  README.md  RUNNING_EXPERIMENTS.md  pyproject.toml  run_idx10.py
.github/workflows/: claude-code-review.yml  claude.yml  linkml.yml  pages.yml  run-eval.yml
.runs/holdout-10/: MANIFEST.json
config/: cv_folds.yaml  experiment.yaml  metrics_weights.yaml
data/gold/: sm_data_harmonization_mapping.json
data/raw_cache/: ess-dive_wfsfa_soil_dataset_urls.csv  wfsfa_sm_dois.txt
docs/manuscript/: 00_abstract.md  01_introduction.md  02_background.md  03_methods.md  04_results.md  05_discussion.md  06_conclusion.md  README.md  figures_and_tables.md  index.html  references.md  research_notes.md
evaluations/: OVERALL_BENCHMARK_EVALUATION.md
evaluations/fold-01-holdout-1-2-3-6-16-27/: AGENT_ACTION_LOG.md  AGENT_INSTRUCTIONS.md  EVALUATION.md  MANIFEST.json  evaluation_metrics.json
evaluations/fold-02-holdout-15-26/: AGENT_ACTION_LOG.md  AGENT_INSTRUCTIONS.md  EVALUATION.md  MANIFEST.json  evaluation_metrics.json
evaluations/fold-03-holdout-4/: AGENT_ACTION_LOG.failed-write-location.md  AGENT_ACTION_LOG.md  AGENT_INSTRUCTIONS.md  EVALUATION.md  MANIFEST.json  evaluation_metrics.json
evaluations/fold-04-holdout-5/: AGENT_ACTION_LOG.md  AGENT_INSTRUCTIONS.md  EVALUATION.md  MANIFEST.json  evaluation_metrics.json
evaluations/fold-05-holdout-7/: AGENT_ACTION_LOG.md  AGENT_INSTRUCTIONS.md  EVALUATION.md  MANIFEST.json  evaluation_metrics.json
evaluations/fold-06-holdout-8/: AGENT_ACTION_LOG.md  AGENT_INSTRUCTIONS.md  EVALUATION.md  MANIFEST.json  evaluation_metrics.json
evaluations/fold-07-holdout-9/: AGENT_ACTION_LOG.md  AGENT_INSTRUCTIONS.md  EVALUATION.md  MANIFEST.json  evaluation_metrics.json
evaluations/fold-08-holdout-10/: AGENT_ACTION_LOG.md  AGENT_INSTRUCTIONS.md  EVALUATION.md  MANIFEST.json  evaluation_metrics.json
evaluations/fold-09-holdout-17/: AGENT_ACTION_LOG.md  AGENT_INSTRUCTIONS.md  EVALUATION.md  MANIFEST.json  evaluation_metrics.json
evaluations/fold-10-holdout-18/: AGENT_ACTION_LOG.md  AGENT_INSTRUCTIONS.md  EVALUATION.md  MANIFEST.json  evaluation_metrics.json
evaluations/fold-11-holdout-23/: AGENT_ACTION_LOG.md  AGENT_INSTRUCTIONS.md  EVALUATION.md  MANIFEST.json  evaluation_metrics.json
evaluations/fold-12-holdout-24/: AGENT_ACTION_LOG.md  AGENT_INSTRUCTIONS.md  EVALUATION.md  MANIFEST.json  evaluation_metrics.json
evaluations/fold-13-holdout-25/: AGENT_ACTION_LOG.md  AGENT_INSTRUCTIONS.md  EVALUATION.md  MANIFEST.json  evaluation_metrics.json
examples/invalid/: HarmonizedRecord-bad-boolean.yaml  HarmonizedRecord-depth-out-of-range.yaml  HarmonizedRecord-missing-required-site.yaml  HarmonizedRecord-no-moisture.yaml  HarmonizedRecord-positive-water-potential.yaml  HarmonizedRecord-vwc-above-one.yaml
examples/valid/: HarmonizedDataset-mixed.yaml  HarmonizedRecord-gravimetric-minimal.yaml  HarmonizedRecord-volumetric-timeseries.yaml  HarmonizedRecord-water-potential.yaml
experiments/: metric_validation.py  phase_a_crossval.py  phase_b_prospective.py
project/jsonschema/: target_schema.schema.json
project/pydantic/: target_schema.py
runs/idx7_fold5_run0/: README.md
scripts/: fetch_metadata.py  run_idx2.py
skills/essdive_sm_curator/: README.md  SKILL.md
skills/essdive_sm_harmonizer/: SKILL.md  soilmoisture_harmonization_general_insights.md
src/: __init__.py
src/analysis/: __init__.py  error_taxonomy.py  irr.py  similarity.py  stats.py
src/execution/: __init__.py  output_loader.py  sandbox.py
src/folds/: __init__.py  ablate_monolith.py  build_env.py  invigilator.py  (+2 more)
tests/: HARNESS_IMPLEMENTATION.md  test_ablate_monolith.py  test_build_env.py  test_expert_harmonizer.py  test_harmonize_dataset26.py  test_harness.py  test_invigilator.py  test_stage_raw_data.py  test_target_schema_examples.py
(+131 files in other folders)
