[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wfsfa-harmonization-eval"
version = "0.1.0"
description = "Evaluation framework for LLM agent pair soil moisture data harmonization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "WFSFA Team", email = "contact@example.com"}
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "scipy>=1.9.0",
    "statsmodels>=0.14.0",
    "pyproj>=3.4.0",  # for coordinate transformations
    "requests>=2.28.0",  # for API calls
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "ipywidgets>=8.0.0",
]

# LinkML schema tooling: validation, linting, and code generation for
# src/schemas/target_schema.yaml (see the Makefile and .github/workflows/linkml.yml).
linkml = [
    "linkml>=1.7",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
]

ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter type checking
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"
